2005-07-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/parts.py:
	* po/POTFILES.in:
	* po/nl.po:
	  more translation

2005-07-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/gen-locale-xml.py:
	* common/locale.mk:
	* flumotion/configure/installed.py.in:
	* flumotion/configure/uninstalled.py.in:
	* flumotion/admin/gtk/main.py:
	  change so that we use localedatadir instead of localedir
	* flumotion/common/bundleclient.py:
	  import os again, it's really needed
	* flumotion/common/registry.py:
	  add "under" keyword for bundle to choose a dir to be found under
	  change getProjectBase to getBaseDir
	* flumotion/component/converters/overlay/overlay.xml:
	  create a bundle for the overlay
	* flumotion/manager/manager.py:
	  use getBaseDir
	  also try to fix registry if a file is missing from disk

2005-07-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* common/Makefile.am:
	* common/common.mk:
	* data/glade/Makefile.am:
	* flumotion.spec.in:
	* po/POTFILES.in:
	* po/nl.po:
	  various distcheck and spec fixes

2005-07-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/gen-locale-xml.py:
	  script to generate locale registry files
	* common/locale.mk:
	  Makefile rules for i18n
	* autogen.sh:
	  add autopoint
	* configure.ac:
	  add gettext
	* Makefile.am:
	  add po directory
	* flumotion/configure/installed.py.in:
	* flumotion/configure/uninstalled.py.in:
	  add localedir
	* flumotion/common/common.py:
	  add getLL()
	* flumotion/common/bundleclient.py:
	  create a getBundles() generator method, we still need to convert
	  parts to use bundleclient.py though
	* flumotion/admin/admin.py:
	  fix for new getBundleSums call
	* flumotion/admin/gtk/greeter.py:
	* flumotion/admin/gtk/client.py:
	  mark strings for translation
	* flumotion/admin/gtk/main.py:
	  set up translation domains
	* flumotion/component/base/admin_gtk.py: