@@ -40,6 +40,7 @@
       <dependencies>
         <dependency name="videotest-base" />
         <dependency name="base-admin-gtk" />
+        <dependency name="wizard" />
       </dependencies>
 
       <directories>
